src/test/ui/type-alias-impl-trait/self-referential-2.stderr
error[E0277]: can't compare `i32` with `Foo`
  --> $DIR/self-referential-2.rs:7:5
   |
LL |     42_i32
   |     ^^^^^^ no implementation for `i32 == Foo`
   |
   = help: the trait `PartialEq<Foo>` is not implemented for `i32`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
